/*
Author: 闫刚 (yes7rose@sina.com)
account.proto (c) 2020
Desc: 账号相关
Created:  2020-09-24T00:20:32.607Z
Modified: !date!
*/

syntax = "proto3";

package swb.cashmere;

enum LoginStatus{
  Login = 0;
  Out = 1;
}

enum AccountStatus{
  Stopped = 0;
  Actived = 1;
}

// 登录
message LoginRequest {
  string country_code = 1;
  string phone = 2;
  string password = 3;
}

message LoginResponse {
  bytes person = 1;
  string token = 2;
}

// 登出
message LogoutRequest {
}

message LogoutResponse {
  LoginStatus result = 1;
}

service AccountGrpc{
  // 登录
  rpc Login (LoginRequest) returns (LoginResponse);
  // rpc Logout (LogoutRequest) returns (LogoutResponse);
}